--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
     "@nestjs/core": "^6.11.8",
     "@nestjs/platform-express": "^6.11.8",
     "@nestjs/swagger": "^4.3.1",
+    "@nestjs/typeorm": "^6.3.3",
+    "helmet": "^3.21.3",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
-    "swagger-ui-express": "^4.1.3"
+    "swagger-ui-express": "^4.1.3",
+    "typeorm": "^0.2.22"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.13.2",
