--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   "dependencies": {
     "@nestjs/common": "^6.11.8",
     "@nestjs/core": "^6.11.8",
+    "@nestjs/passport": "^6.2.0",
     "@nestjs/platform-express": "^6.11.8",
     "@nestjs/swagger": "^4.3.1",
     "@nestjs/typeorm": "^6.3.3",
     "helmet": "^3.21.3",
     "mysql": "^2.18.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
@@ -40,6 +43,7 @@
     "@types/express": "^4.17.2",
     "@types/jest": "25.1.2",
     "@types/node": "^13.1.6",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
