--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@nestjs/common": "^6.11.8",
     "@nestjs/core": "^6.11.8",
+    "@nestjs/jwt": "^6.1.2",
     "@nestjs/passport": "^6.2.0",
     "@nestjs/platform-express": "^6.11.8",
     "@nestjs/swagger": "^4.3.1",
@@ -29,6 +30,7 @@
     "helmet": "^3.21.3",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
@@ -43,6 +45,7 @@
     "@types/express": "^4.17.2",
     "@types/jest": "25.1.2",
     "@types/node": "^13.1.6",
+    "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
